# django-contact-app

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: asgi.py  settings.py  urls.py  wsgi.py
docker/django/: Dockerfile  entrypoint.sh
fixtures/: contact.json
htmx/contact/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
htmx/contact/migrations/: 0001_initial.py
htmx/contact/templates/contact/: create.html  detail.html  list.html  update.html
htmx/contact/templates/contact/includes/: archive_download_ui.html  back.html  list_rows.html
htmx/contact/templates/contact_mobile/: delete.xml  edit.xml  form_fields.xml  index.xml  new.xml  rows.xml  show.xml
htmx/contact/templatetags/: url_add_query.py
htmx/static/: site.css
htmx/templates/layout/: base.html  base.xml
